--- a/aula_3/package.json
+++ b/aula_3/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "build": "npm run clean && webpack",
     "clean": "rimraf build",
-    "app": "webpack-dev-server"
+    "start": "webpack-dev-server"
   },
   "author": "Otávio Sanchez",
   "license": "ISC"
